--- a/proyecto.html
+++ b/proyecto.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+        body{
+            margin: 0;
+            padding: 20px;
+        }
+    </style>
+    <h1>Progracion Competitiva</h1>
+    <p>
+        La programacion competitiva es una disciplina en la cual 
+        se desarrollan soluciones a problemas logicos matematicos
+        por medio de la computadora. Todo esto en un tiempo corto.
+    </p>
+    <h3>Concursos</h3>
+    <p>Existen mmuchos lugares en donde se realizan competiciones con el objetivo de reclutar programadores.</p>
+    <br>
+    <p>Existen varias realizadas por empresas muy conocidas como las de Google, Meta y Oracle.
+        Y otras mas generales como las competencias regionales hasta la mundiales.
+    </p>
+
+    <img src="mqdefault.jpg" alt="">
 </body>
 </html>
