--- a/proyecto.html
+++ b/proyecto.html
@@ -9,10 +9,37 @@
     <style>
         body{
             margin: 0;
+            background-color: whitesmoke;
             padding: 20px;
         }
+        p{
+            font-family: cursive;
+        }
+        h1,h3{
+            font-family: 'Times New Roman', Times, serif;
+            font-weight: 600;
+        }
+        img{
+            width: 500px;
+            height: 300px;
+        }
+        div{
+            background-color: slategrey;
+            width: 100%;
+            height: 200px;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            border-radius: 50px;
+        }
+        h1{
+            color: white;
+            text-align: center;
+            top: 50%;
+        }
     </style>
-    <h1>Progracion Competitiva</h1>
+    <div><h1>Progracion Competitiva</h1></div>
+   
     <p>
         La programacion competitiva es una disciplina en la cual 
         se desarrollan soluciones a problemas logicos matematicos
