--- a/proyecto.html
+++ b/proyecto.html
@@ -52,6 +52,93 @@
         Y otras mas generales como las competencias regionales hasta la mundiales.
     </p>
 
+    <p>Lista de competiciones
+        Recopilación tanto de competiciones sobre programación como de webs interactivas donde se publican ejercicios o concursos de programación.
+        
+        Normalmente estos concursos tienen una lista de los problemas de anteriores ocasiones, así que aunque haya pasado la fecha puedes entrenar usando estos ejercicios.
+        
+        Competiciones
+        Google Hashcode
+        Frecuencia: anual.
+        Por equipos, de 2 a 4.
+        Información general
+        Archivo
+        Último evento: 5 de Marzo, 2019.
+        Google Codejam
+        Frecuencia: anual.
+        Individual.
+        Información general
+        Archivo
+        Próximo evento: 5 de Abril.
+        Google Kick Start
+        Frecuencia: anual.
+        Individual.
+        Información general
+        Archivo
+        Horario de eventos
+        Próxima ronda: 20 de Abril.
+        Rondas recomendadas para España (por horas) en 2019 son la C y la G. Podéis participar en las que queráis, pero esas son las que recomiendan en Google.
+        Tuenti Challenge
+        Frecuencia: anual.
+        Individual.
+        Información general
+        Archivo
+        Comienzo de rondas: 29 de Abril.
+        Competiciones de Hackerrank
+        Frecuencia: baja, va cambiando. Nueve en la segunda mitad de 2018.
+        Individual.
+        Actuales y archivo
+        Se programa online, se ejecuta en el servidor, así que solo se puede programar en un lenguaje de esta lista.
+        Competiciones de CodeChef
+        Frecuencia: muy alta pero va cambiando. Unos veinte en Marzo 2019 (cuando se hizo esta lista).
+        Individual.
+        Información
+        Actuales y archivo
+        Se programa online, se ejecuta en el servidor, así que solo se puede programar en un lenguaje de esta lista.
+        Codeforces
+        Frecuencia: alta, seis cada mes.
+        Individual.
+        Actuales y archivo
+        El tiempo usado en el concurso y el número de intentos reducen la puntuación.
+        Se programa online, se ejecuta en el servidor, así que solo se puede programar en un lenguaje de esta lista.
+        Topcoder
+        Nota: Topcoder no sube competiciones "para aprender". Aquí haces trabajos y proyectos pagados. Si tu solución es elegida, te pagan, y si no pues no. Añado la nota porque el concepto es un poco diferente del resto de competiciones. Tiene la ventaja de que es posible que te paguen bastante y que trabajas en casos reales, y la desventaja de que probablemente sean complicados y (supongo) que habrá gente experta participando.
+        Nota 2: Creo que las restricciones de copyright en tu código serán más estrictas, debido a que técnicamente tu código lo utilizará alguna empresa. No he participado nunca así que no estoy seguro.
+        Nota 3: es la única en la que he visto retos de visualización de datos o de diseño de aplicaciones y webs.
+        Frecuencia: muy alta, unas cincuenta abiertas el 30 de Marzo de 2019, que es cuando se ha hecho esta lista.
+        Individual.
+        Actuales y archivo
+        Nota 4: Uno de los usuarios más activos en TopCoder, Petr Mitrichev, mantiene un blog donde suele hablar de las competiciones e ideas detrás de problemas concretos.
+        Competiciones en CodinGame
+        Nota: CodinGame es una web un poco diferente de ejercicios de programar, en la que hay un juego interactivo sobre el que tienes que programar un detalle concreto.
+        Campo específico: Inteligencia artificial, creación de bots y agentes en juegos.
+        Individual.
+        Información
+        Competiciones actuales
+        Próximo evento: 17 de Mayo.
+        Competiciones en Kaggle
+        Nota: Al igual que con otras competiciones como las de Topcoder, aquí hay empresas poniendo problemas reales con premios altos.
+        Nota 2: Tienen unos mini-cursos gratuitos sobre ciencia de datos y aprendizaje automático.
+        Nota 3: Tienen más de 15000 datasets gratuitos subidos para que puedas investigar o practicar con ellos (!) .
+        Campo específico: Ciencia de datos, aprendizaje automático.
+        Frecuencia: alta. 22 activas el 30 de Marzo de 2019, cuando se hizo esta lista.
+        Individual.
+        Información
+        Competiciones actuales y archivo
+        Lista de competiciones CTF
+        Campo específico: Seguridad, ingeniería inversa, hacking, criptografía.
+        Tanto individual como por equipos.
+        Frecuencia: alta, varios por semana.
+        Lista.
+        Nota: Esto no es una web concreta donde participar, es más bien una lista recopilatoria de eventos que se publica en CTF Time.
+        Labs
+        Competiciones permanentes
+        HackTheBox
+        CTF365
+        OverTheWire
+        ShellterLabs
+        RingZer0Team
+        ka0labs</p>
     <img src="mqdefault.jpg" alt="">
 </body>
 </html>
