Ya la ultimisima dea deberas

--- a/proyecto.html
+++ b/proyecto.html
@@ -52,7 +52,7 @@
         Y otras mas generales como las competencias regionales hasta la mundiales.
     </p>
 
-    <p>Lista de competiciones
+    <pre>Lista de competiciones
         Recopilación tanto de competiciones sobre programación como de webs interactivas donde se publican ejercicios o concursos de programación.
         
         Normalmente estos concursos tienen una lista de los problemas de anteriores ocasiones, así que aunque haya pasado la fecha puedes entrenar usando estos ejercicios.
@@ -138,7 +138,7 @@
         OverTheWire
         ShellterLabs
         RingZer0Team
-        ka0labs</p>
+        ka0labs</pre>
     <img src="mqdefault.jpg" alt="">
 </body>
 </html>
